# telegram-filter

./: .gitignore  Makefile  pyproject.toml
infra/: .env.example
infra/docker/: docker-compose.yml
infra/docker/gpt-api/: Dockerfile  docker-compose.yml
libs/common/logger/: config.py  factory.py  pyproject.toml
services/gpt-api/: pyproject.toml
